# Datathon2025

./: .gitignore  README.md
backend/API/: .env.example  README.md  database.py  img.py  main.py  pdfparse.py  pyproject.toml
backend/API/routes/: parse.py  top_agent.py  upload.py  view.py
backend/API/services/: __init__.py  bbox_classification.py  bbox_combiner.py  database.py  document_ai.py  document_parser.py  images.py  llm.py  pdf_utils.py  top_agent.py  top_agent_chains.json  vision.py
backend/MakotoDB/tests/: MakotoGridFSTest.py  pyproject.toml  tot_test.py  vultr_agent.py
backend/MakotoDB/tests/agent_workspace/: agent-1rKN0mjcA206Z8lJwbcTelS0t37jtZ8W_state.json  agent-1vCmoN7l4j4iTTDu5HEAP4TlYbS2atrF_state.json  agent-2zyXy9JGZp5bGBZcmoNZpgpay6JM1gx2_state.json  agent-3kqoNQ0QHjvft1G1wpbhUQ3TDP9obkbh_state.json  agent-3o95AJtNwbYWF27cvfy7ZENZcXvfGqrN_state.json  agent-7anVuHGuOj3O2VP1iJ0IUodyNT6NBcKK_state.json  agent-8vSB4cMGF1O1k4DTZ5A3X2Z9VtkgLXI9_state.json  agent-9o6w0ZN7gORcBRMu39V8Ev0ugv5A7fmX_state.json  agent-GXFdkGYq6BZxR1zLtKgKqG3WeJADmxXn_state.json  agent-H3Ev8jEUR6Z0yKUlskc4MEppThKwpJMU_state.json  agent-HObJfH4Bjn2qycTz9befvGB4t48aMYMb_state.json  agent-JdXWHLf7hTz5P23P1Yf2hYsvBvKuYHH9_state.json  agent-KinokHFLoUJAsAcdpTzMHbOTAExhng4l_state.json  agent-Nvc0fWnsEU9hLh9OxfVfBA3tHrjSMqCQ_state.json  agent-QCxuXHk6FM0LTO2WOkblRsehpfgj6a53_state.json  agent-Qx1yZb0LmEcZGeVVTjd0Qk409wIHnu2M_state.json  agent-Ur5chFWqp5U4TBuicBT0ujwAEICgTOHa_state.json  agent-Ygu0JyVNk3IMAYHeCRGgbH3NgjBv4C8m_state.json  error.txt  (+10 more)
frontend/: .gitignore  index.html  (+6 more)
(+73 files in other folders)
