[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "google-cloud-documentai>=2.0.0",
    "google-cloud-vision>=3.0.0",
    "pymongo>=4.15.3",
    "pymupdf>=1.23.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.0",
    "uvicorn>=0.38.0",
]
